# DFCIR

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  DFCIRConfig.cmake.in  FindLpSolve.cmake
include/dfcir/: DFCIROperations.td  DFCIRTypes.h  DFCIRTypes.td
include/dfcir/conversions/: DFCIRLPUtils.h  DFCIRPasses.h  DFCIRPassesUtils.h
lib/dfcir/: CMakeLists.txt  DFCIROperations.cpp  DFCIRTypes.cpp
lib/dfcir/conversions/: DFCIRLPUtils.cpp  DFCIRLinearSchedulerPass.cpp  DFCIRPassesUtils.cpp  DFCIRToFIRRTLPass.cpp
